rsvp/policy-ast/src/test/resources/antlr/negative/illegal-shadow-2.cedarschema
entity Foo;
type Foo = String;

// EXPECTED: Reference (R) Foo illegally shadowed